--- a/www/less/core/mixins.less
+++ b/www/less/core/mixins.less
@@ -1,6 +1,6 @@
 
 .bg-image (@path, @size: auto auto, @repeat: repeat, @position: center center) {
-	background-image: url("/assets/@{path}.png");
+	background-image: url("../assets/@{path}.png");
 	background-repeat: @repeat;
 	background-position: @position;
 	background-size: @size;
@@ -10,7 +10,7 @@
 			only screen and (-webkit-min-device-pixel-ratio: 1.5),
 			only screen and (min-device-pixel-ratio: 1.5) {
 
-		background-image: url("/assets/@{path}@2x.png");
+		background-image: url("../assets/@{path}@2x.png");
 
 	}
 }
