--- a/www/less/game/main.less
+++ b/www/less/game/main.less
@@ -16,7 +16,7 @@
 		.full-space;
 		z-index: 2;
 
-		.game-sprite {
+		.game-sprite, .game-entity {
 			display: inline-block;
 			position: absolute;
 			left: 0;
