--- a/www/less/core/layout.less
+++ b/www/less/core/layout.less
@@ -5,11 +5,16 @@ html, body {
 }
 
 body {
-	background: #000;
+	background: #222;
 	font-family: @type-base-face;
 	font-size: @type-base-size;
 	color: @type-base-color;
 	.no-select;
+}
+
+#view-wrap {
+	position: absolute;
+	// overflow: hidden;
 }
 
 .float-left {
@@ -37,5 +42,44 @@ body {
 }
 
 .view {
-	background: #222;
+	background: @color-pale-blue-lighter;
+}
+
+.top-bar {
+	margin: 0;
+	padding: 10px 0;
+	background: @color-pale-blue-light;
+	position: relative;
+	margin-bottom: 10px;
+
+	&.fixed {
+		position: absolute;
+		left: 0;
+		width: 100%;
+		top: 0;
+	}
+
+	h1 {
+		font-weight: normal;
+		margin: 0;
+	}
+
+	.button-flat {
+		position: absolute;
+		top: 6px;
+		width: 20px;
+		line-height: 20px;
+		text-align: center;
+		color: #fff;
+		font-size: 20px;
+
+		&.button-left {
+			left: 6px;
+		}
+
+		.icon-caret-left {
+			position: relative;
+			right: 2px;
+		}
+	}
 }
