--- a/www/less/game/main.less
+++ b/www/less/game/main.less
@@ -33,4 +33,16 @@
 		.full-space;
 		z-index: 3;
 	}
+
+	.ui-bar {
+		position: absolute;
+		left: 0;
+		top: 0;
+		z-index: 3;
+		width: 100%;
+
+		.button-back {
+			.top-bar-button;
+		}
+	}
 }
