--- a/www/templates/views/levels.hbs
+++ b/www/templates/views/levels.hbs
@@ -1,6 +1,6 @@
 <div class="top-bar fixed">
 	
-	<a class="button-flat button-left" href="#">
+	<a class="top-bar-button button-left" href="#">
 		<i class="icon-caret-left"></i>
 	</a>
 
