Refactor base view, fix flow on game start, fix top bar positioning

--- a/www/templates/partials/game-stage.hbs
+++ b/www/templates/partials/game-stage.hbs
@@ -1,15 +1,1 @@
-<div class="game-stage">
-	
-	<div class="ui-bar">
-
-		<a href="#" data-role="back" class="top-bar-button button-left">
-			<i class="icon-caret-left"></i>
-		</a>
-
-		<a href="#" data-role="restart" class="top-bar-button button-right">
-			<i class="icon-rotate-left"></i>
-		</a>
-		
-	</div>
-
-</div>
+<div class="game-stage"></div>
