--- a/www/less/game/main.less
+++ b/www/less/game/main.less
@@ -1,10 +1,17 @@
 
-.full-space {
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
+.view.view-game {
+
+	.ui-bar {
+		position: absolute;
+		left: 0;
+		top: 0;
+		z-index: 3;
+		width: 100%;
+
+		.button-back {
+			.top-bar-button;
+		}
+	}
 }
 
 .game-stage {
@@ -32,17 +39,5 @@
 	.game-controls {
 		.full-space;
 		z-index: 3;
-	}
-
-	.ui-bar {
-		position: absolute;
-		left: 0;
-		top: 0;
-		z-index: 3;
-		width: 100%;
-
-		.button-back {
-			.top-bar-button;
-		}
 	}
 }
