--- a/www/less/index.less
+++ b/www/less/index.less
@@ -1,10 +1,15 @@
 
 // Variables > Colors
 @color-primary: #41708a;
+
 @color-pale-blue-lighter: #a2bfc9;
 @color-pale-blue-light: #99b7c2;
 @color-pale-blue-dark: #87a6b1;
 @color-pale-blue-darker: #7796a1;
+
+@color-yellow-dark: #ead545;
+
+@color-red-light: #fca47e;
 
 // Variables > Type: Base
 @type-base-face: 'GEInspira', 'HelveticaNeue', Helvetica, Arial, sans-serif;
