--- a/www/templates/views/game.hbs
+++ b/www/templates/views/game.hbs
@@ -5,6 +5,8 @@
 		<i class="icon-caret-left"></i>
 	</a>
 
+	<span class="shots-counter" data-role="shots-counter">-</span>
+
 	<a href="#" data-role="restart" class="top-bar-button button-right">
 		<i class="icon-rotate-left"></i>
 	</a>
