Improve end of game screen, add user data module for completed levels

--- a/www/less/index.less
+++ b/www/less/index.less
@@ -51,6 +51,7 @@
 // Imports > Elements
 @import "elements/buttons.less";
 @import "elements/animations.less";
+@import "elements/modals.less";
 
 // Imports > Game
 @import "game/main.less";
@@ -58,3 +59,6 @@
 // Imports > Views
 @import "views/home.less";
 @import "views/levels.less";
+
+// Imports > Views > Modals
+@import "views/modals/end-game.less";
