Add back to level in end of game modal, fix sensors, introduce decorators

--- a/www/less/game/main.less
+++ b/www/less/game/main.less
@@ -11,6 +11,7 @@
 
 		.button-back {
 			.top-bar-button;
+			z-index: 100;
 		}
 
 		.shots-counter {
@@ -54,6 +55,12 @@
 			position: absolute;
 			left: 0;
 			top: 0;
+
+			.game-decorator {
+				width: 100%;
+				height: 100%;
+				background-size: 100% 100%;
+			}
 		}
 	}
 
