--- a/www/less/views/modals/end-game.less
+++ b/www/less/views/modals/end-game.less
@@ -1,6 +1,20 @@
 
 .modal.modal-end-game {
 
+	.button-back {
+		display: inline-block;
+		width: 33px;
+		height: 33px;
+		line-height: 35px;
+		color: mix(@color-pale-blue-lighter, #fff, 50%);
+		text-align: center;
+		background: @color-pale-blue-dark;
+		.border-radius(@radius-base);
+		position: absolute;
+		left: 5px;
+		top: 5px;
+	}
+
 	.stars {
 		margin: auto;
 		width: 50%;
