--- a/www/templates/partials/modal-end-game.hbs
+++ b/www/templates/partials/modal-end-game.hbs
@@ -1,3 +1,8 @@
+
+<a href="#" class="button-back" data-role="back">
+	<i class="icon-chevron-left"></i>
+</a>
+
 <div class="stars">
 	<div class="star-holder">
 		<i class="icon-star"></i>
