--- a/www/less/views/modals/end-game.less
+++ b/www/less/views/modals/end-game.less
@@ -23,6 +23,7 @@
 		.border-radius(@radius-base);
 		.clearfix;
 		padding: 0 10px;
+		margin-bottom: 10px;
 
 		.star-holder {
 			color: @color-pale-blue-dark;
