--- a/www/templates/partials/modal-end-game.hbs
+++ b/www/templates/partials/modal-end-game.hbs
@@ -1,33 +1,52 @@
-
 <a href="#" class="button-back" data-role="back">
 	<i class="icon-chevron-left"></i>
 </a>
 
-<div class="stars">
-	<div class="star-holder">
-		<i class="icon-star"></i>
-		<i class="icon-star star"></i>
-	</div>
-	<div class="star-holder">
-		<i class="icon-star"></i>
-		<i class="icon-star star"></i>
-	</div>
-	<div class="star-holder">
-		<i class="icon-star"></i>
-		<i class="icon-star star"></i>
-	</div>
-</div>
+{{#if win}}
 
-<div class="actions">
-	
-	<a href="#" data-role="restart">
-		<i class="icon-rotate-left"></i>
-		Restart
-	</a>
+	<div class="stars">
+		<div class="star-holder">
+			<i class="icon-star"></i>
+			<i class="icon-star star"></i>
+		</div>
+		<div class="star-holder">
+			<i class="icon-star"></i>
+			<i class="icon-star star"></i>
+		</div>
+		<div class="star-holder">
+			<i class="icon-star"></i>
+			<i class="icon-star star"></i>
+		</div>
+	</div>
 
-	<a href="#" class="primary" data-role="next">
-		Next
-		<i class="icon-chevron-right"></i>
-	</a>
+	<div class="actions">
+		
+		<a href="#" data-role="restart">
+			<i class="icon-rotate-left"></i>
+			Restart
+		</a>
 
-</div>
+		<a href="#" class="primary" data-role="next">
+			Next
+			<i class="icon-chevron-right"></i>
+		</a>
+
+	</div>
+
+{{else}}
+
+	<div class="actions">
+		
+		<a href="#" data-role="back">
+			<i class="icon-list"></i>
+			Levels
+		</a>
+
+		<a href="#" class="primary" data-role="restart">
+			<i class="icon-rotate-left"></i>
+			Try Again
+		</a>
+
+	</div>
+
+{{/if}}
