--- a/www/less/game/main.less
+++ b/www/less/game/main.less
@@ -13,31 +13,46 @@
 			.top-bar-button;
 			z-index: 100;
 		}
+	}
 
-		.shots-counter {
-			margin: auto;
-			display: inline-block;
-			margin-top: -3px;
-			font-size: 25px;
-			color: @color-primary;
-			background: rgba(255, 255, 255, .6);
-			line-height: 60px;
-			width: 60px;
-			.border-radius(100%);
-			text-align: center;
+	.shots-counter {
+		background: @color-pale-blue-lighter;
+		position: absolute;
+		display: block;
+		width: 70px;
+		bottom: 0;
+		left: 50%;
+		margin-left: -35px;
+		z-index: 3;
+		text-align: center;
+		font-size: 20px;
+		padding: 3px 0;
+		.border-radius(10px 10px 0 0);
+		color: #fff;
 
-			&.stars-2 {
-				color: @color-yellow-dark;
-			}
-
-			&.stars-1 {
-				color: @color-red-light;
-			}
-
-			&.stars-0 {
-				color: @color-pale-blue-light;
-			}
+		&.stars-2 {
+			color: @color-yellow-dark;
 		}
+
+		&.stars-1 {
+			color: @color-red-light;
+		}
+
+		&.stars-0 {
+			color: @color-pale-blue-light;
+		}
+	}
+
+	.pause-button {
+		position: absolute;
+		display: inline-block;
+		color: @color-pale-blue-light;
+		font-size: 16px;
+		z-index: 3;
+		right: 0;
+		top: 0;
+		padding-right: 12px;
+		padding-top: 10px;
 	}
 }
 
