--- a/www/templates/views/game.hbs
+++ b/www/templates/views/game.hbs
@@ -1,14 +1,6 @@
 
-<div class="ui-bar">
+<span class="shots-counter" data-role="shots-counter">-</span>
 
-	<a href="#" data-role="back" class="top-bar-button button-left">
-		<i class="icon-caret-left"></i>
-	</a>
-
-	<span class="shots-counter" data-role="shots-counter">-</span>
-
-	<a href="#" data-role="restart" class="top-bar-button button-right">
-		<i class="icon-rotate-left"></i>
-	</a>
-	
-</div>
+<span class="pause-button" data-role="pause">
+	<i class="icon-pause"></i>
+</span>
