Style amends to shots-counter

--- a/www/templates/views/game.hbs
+++ b/www/templates/views/game.hbs
@@ -1,5 +1,8 @@
 
-<span class="shots-counter" data-role="shots-counter">-</span>
+<span class="shots-counter">
+	<i class="icon-bullseye"></i>
+	<span data-role="shots-counter">-</span>
+</span>
 
 <span class="pause-button" data-role="pause">
 	<i class="icon-pause"></i>
