--- a/www/less/game/main.less
+++ b/www/less/game/main.less
@@ -19,16 +19,24 @@
 		background: @color-pale-blue-lighter;
 		position: absolute;
 		display: block;
-		width: 70px;
-		bottom: 0;
+		width: 80px;
+		top: 0;
 		left: 50%;
-		margin-left: -35px;
+		margin-left: -40px;
 		z-index: 3;
 		text-align: center;
 		font-size: 20px;
 		padding: 3px 0;
-		.border-radius(10px 10px 0 0);
+		.border-radius(0 0 10px 10px);
 		color: #fff;
+
+		i {
+			color: @color-pale-blue-darker;
+			font-size: 16px;
+			position: relative;
+			top: -1px;
+			margin-left: -15px;
+		}
 
 		&.stars-2 {
 			color: @color-yellow-dark;
