Use more variables in font-sizes

--- a/www/less/views/levels.less
+++ b/www/less/views/levels.less
@@ -12,10 +12,9 @@
 			.button-flat;
 			width: 85px;
 			height: 85px;
-			line-height: 69px;
+			line-height: 62px;
 			padding-bottom: 16px;
-			font-size: 35px;
-			font-weight: bold;
+			font-size: @type-heading1-size;
 			padding: 0;
 			color: #fff;
 			margin: 0 5px 10px;
