--- a/www/less/core/typography.less
+++ b/www/less/core/typography.less
@@ -27,23 +27,23 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-	font-family: @type-heading1-size;
+	font-size: @type-heading1-size;
 }
 
 h2 {
-	font-family: @type-heading2-size;
+	font-size: @type-heading2-size;
 }
 
 h3 {
-	font-family: @type-heading3-size;
+	font-size: @type-heading3-size;
 }
 
 h4 {
-	font-family: @type-heading4-size;
+	font-size: @type-heading4-size;
 }
 
 h5 {
-	font-family: @type-heading5-size;
+	font-size: @type-heading5-size;
 }
 
 h6 {
