Replace fonts, add illustrations and home view, integrate in navigation

--- a/less/core/fonts.less
+++ b/less/core/fonts.less
@@ -1,22 +1,25 @@
 
 @font-face {
-	font-family: 'GEInspira';
-	src: url('../fonts/geinspira.eot');
-	src: url('../fonts/geinspira.eot?#iefix') format('embedded-opentype'),
-		 url('../fonts/geinspira.woff') format('woff'),
-		 url('../fonts/geinspira.ttf') format('truetype'),
-		 url('../fonts/geinspira.svg#geinspira') format('svg');
-	font-weight: normal;
-	font-style: normal;
+  font-family: 'Maven Pro';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Maven Pro Regular'), local('MavenProRegular'), url('../fonts/maven-pro-normal.woff') format('woff');
 }
-
 @font-face {
-	font-family: 'GEInspira';
-	src: url('../fonts/geinspirabold.eot');
-	src: url('../fonts/geinspirabold.eot?#iefix') format('embedded-opentype'),
-		 url('../fonts/geinspirabold.woff') format('woff'),
-		 url('../fonts/geinspirabold.ttf') format('truetype'),
-		 url('../fonts/geinspirabold.svg#geinspirabold') format('svg');
-	font-weight: bold;
-	font-style: normal;
+  font-family: 'Maven Pro';
+  font-style: normal;
+  font-weight: 500;
+  src: local('Maven Pro Medium'), local('MavenProMedium'), url('../fonts/maven-pro-medium.woff') format('woff');
+}
+@font-face {
+  font-family: 'Maven Pro';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Maven Pro Bold'), local('MavenProBold'), url('../fonts/maven-pro-bold.woff') format('woff');
+}
+@font-face {
+  font-family: 'Maven Pro';
+  font-style: normal;
+  font-weight: 900;
+  src: local('Maven Pro Black'), local('MavenProBlack'), url('../fonts/maven-pro-black.woff') format('woff');
 }
