--- a/less/core/mixins.less
+++ b/less/core/mixins.less
@@ -1,6 +1,6 @@
 
 .bg-image (@path, @size: auto auto, @repeat: repeat, @position: center center) {
-	background-image: url("../assets/@{path}.png");
+	background-image: url("@assets-dir/@{path}.png");
 	background-repeat: @repeat;
 	background-position: @position;
 	background-size: @size;
