--- a/less/index.less
+++ b/less/index.less
@@ -12,12 +12,12 @@
 @color-red-light: #fca47e;
 
 // Variables > Type: Base
-@type-base-face: 'GEInspira', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+@type-base-face: 'Maven Pro', 'HelveticaNeue', Helvetica, Arial, sans-serif;
 @type-base-size: 14px;
 @type-base-color: #fff;
 
 // Variables > Type: Headings
-@type-heading-face: 'GEInspira', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+@type-heading-face: 'Maven Pro', 'HelveticaNeue', Helvetica, Arial, sans-serif;
 @type-heading1-size: 36px;
 @type-heading2-size: @type-heading1-size - 2px;
 @type-heading3-size: @type-heading2-size - 2px;
@@ -29,6 +29,7 @@
 // Variables > Mixed
 @radius-base: 3px;
 @rule-base-color: #87a6b1;
+@assets-dir: '../assets';
 
 // Imports > Vendor
 @import "vendor/font-awesome/font-awesome.less";
