--- a/templates/views/home.hbs
+++ b/templates/views/home.hbs
@@ -1,1 +1,17 @@
-Hello world
+<div class="inner">
+
+	<div class="main-nav">
+
+		<img class="logo" src="../assets/logo/home@2x.png">
+
+		<a class="button-flat block" data-role="nav-play" href="#">
+			<i class="icon-gamepad"></i>
+			Play
+		</a>
+		<a class="button-flat block" data-role="nav-levels" href="#">
+			<i class="icon-list"></i>
+			Levels
+		</a>
+	</div>
+
+</div>
