--- a/templates/views/levels.hbs
+++ b/templates/views/levels.hbs
@@ -1,6 +1,6 @@
 <div class="top-bar fixed">
 	
-	<a class="top-bar-button button-left" href="#">
+	<a class="top-bar-button button-left" href="#" data-role="nav-home">
 		<i class="icon-caret-left"></i>
 	</a>
 
