Adjust path of home image

--- a/templates/views/home.hbs
+++ b/templates/views/home.hbs
@@ -2,7 +2,7 @@
 
 	<div class="main-nav">
 
-		<img class="logo" src="../assets/logo/home@2x.png">
+		<img class="logo" src="./assets/logo/home@2x.png">
 
 		<a class="button-flat block" data-role="nav-play" href="#">
 			<i class="icon-gamepad"></i>
