--- a/less/core/mixins.less
+++ b/less/core/mixins.less
@@ -1,6 +1,6 @@
 
 .bg-image (@path, @size: auto auto, @repeat: repeat, @position: center center) {
-	background-image: url("@assets-dir/@{path}.png");
+	background-image: url("@{assets-dir}/@{path}.png");
 	background-repeat: @repeat;
 	background-position: @position;
 	background-size: @size;
@@ -10,8 +10,14 @@
 			only screen and (-webkit-min-device-pixel-ratio: 1.5),
 			only screen and (min-device-pixel-ratio: 1.5) {
 
-		background-image: url("../assets/@{path}@2x.png");
+		background-image: url("@{assets-dir}/@{path}@1.5x.png");
+	}
 
+	@media  only screen and (-moz-min-device-pixel-ratio: 2),
+			only screen and (-webkit-min-device-pixel-ratio: 2),
+			only screen and (min-device-pixel-ratio: 2) {
+
+		background-image: url("@{assets-dir}/@{path}@2x.png");
 	}
 }
 
