--- a/less/index.less
+++ b/less/index.less
@@ -29,7 +29,7 @@
 // Variables > Mixed
 @radius-base: 3px;
 @rule-base-color: #87a6b1;
-@assets-dir: '../assets';
+@assets-dir: 'assets';
 
 // Imports > Vendor
 @import "vendor/font-awesome/font-awesome.less";
