--- a/docs/files/views/HomeView.coffee.html
+++ b/docs/files/views/HomeView.coffee.html
@@ -3,23 +3,21 @@
   <head>
   <meta charset='UTF-8'>
   <title>CoffeeScript API Documentation</title>
-  <link rel='stylesheet' href='../../../assets/codo.css' type='text/css'>
-  <script src='../../../assets/codo.js'></script>
-  <script src='../../../assets/search_data.js'></script>
+  <link rel='stylesheet' href='../../assets/codo.css' type='text/css'>
+  <script src='../../assets/codo.js'></script>
+  <script src='../../assets/search_data.js'></script>
 </head>
   <body>
-    <div id='base' data-path='../../../'></div>
+    <div id='base' data-path='../../'></div>
 <div id='header'>
   <div id='menu'>
-    <a href='../../../README.md.html' title='Flickblaster-game'>Flickblaster-game</a>
+    <a href='../../README.md.html' title='Flickblaster-game'>Flickblaster-game</a>
     &raquo;
-    <a href='../../../class_index.html' title='Index'>Index</a>
+    <a href='../../class_index.html' title='Index'>Index</a>
     &raquo;
-    <span class='title'>game</span>
+    <span class='title'>views</span>
     &raquo;
-    <span class='title'>utils</span>
-    &raquo;
-    <span class='title'>gameData.coffee</span>
+    <span class='title'>HomeView.coffee</span>
     <nav>
       <ul>
         <li class='noframes'>
@@ -28,10 +26,10 @@
       </ul>
     </nav>
     <div id='search'>
-      <a id='class_list_link' href='../../../class_list.html'>Classes</a>
-      <a id='file_list_link' href='../../../file_list.html'>Files</a>
-      <a id='method_list_link' href='../../../method_list.html'>Methods</a>
-      <a id='extra_list_link' href='../../../extra_list.html'>Extras</a>
+      <a id='class_list_link' href='../../class_list.html'>Classes</a>
+      <a id='file_list_link' href='../../file_list.html'>Files</a>
+      <a id='method_list_link' href='../../method_list.html'>Methods</a>
+      <a id='extra_list_link' href='../../extra_list.html'>Extras</a>
     </div>
   </div>
   <iframe id='search_frame'></iframe>
@@ -110,12 +108,12 @@
     <div id='content'>
       <h1>
         File:
-        gameData.coffee
+        HomeView.coffee
       </h1>
       <table class='box'>
         <tr>
           <td>Defined in:</td>
-          <td>game&#47;utils</td>
+          <td>views</td>
         </tr>
       </table>
     </div>
