Add top padding from viewport

--- a/less/game/main.less
+++ b/less/game/main.less
@@ -16,7 +16,6 @@
 	}
 
 	.shots-counter {
-		background: @color-pale-blue-lighter;
 		position: absolute;
 		display: block;
 		width: 80px;
@@ -54,13 +53,12 @@
 	.pause-button {
 		position: absolute;
 		display: inline-block;
-		color: @color-pale-blue-light;
+		color: #fff;
 		font-size: 16px;
 		z-index: 3;
 		right: 0;
 		top: 0;
-		padding-right: 12px;
-		padding-top: 10px;
+		padding: 5px 12px 16px 16px;
 	}
 }
 
