--- a/less/game/main.less
+++ b/less/game/main.less
@@ -24,8 +24,8 @@
 		margin-left: -40px;
 		z-index: 3;
 		text-align: center;
-		font-size: 20px;
-		padding: 3px 0;
+		font-size: 23px;
+		padding: 6px 0;
 		.border-radius(0 0 10px 10px);
 		color: #fff;
 
@@ -54,11 +54,11 @@
 		position: absolute;
 		display: inline-block;
 		color: #fff;
-		font-size: 16px;
+		font-size: 18px;
 		z-index: 3;
 		right: 0;
 		top: 0;
-		padding: 5px 12px 16px 16px;
+		padding: 10px 14px;
 	}
 }
 
