Implement tutorials and create intro tutorial

--- a/less/index.less
+++ b/less/index.less
@@ -64,3 +64,4 @@
 // Imports > Views > Modals
 @import "views/modals/end-game.less";
 @import "views/modals/pause.less";
+@import "views/modals/tutorial.less";
