--- a/templates/partials/modal-end-game.hbs
+++ b/templates/partials/modal-end-game.hbs
@@ -1,6 +1,10 @@
-<a href="#" class="button-back" data-role="back">
-	<i class="icon-chevron-left"></i>
-</a>
+{{#if win}}
+
+	<a href="#" class="button-back" data-role="back">
+		<i class="icon-chevron-left"></i>
+	</a>
+
+{{/if}}
 
 {{#if win}}
 
