Replace font in app and all assets with logo

--- a/less/core/fonts.less
+++ b/less/core/fonts.less
@@ -1,25 +1,7 @@
 
 @font-face {
-  font-family: 'Maven Pro';
+  font-family: 'Varela Round';
   font-style: normal;
   font-weight: 400;
-  src: local('Maven Pro Regular'), local('MavenProRegular'), url('./fonts/maven-pro-normal.woff') format('woff');
-}
-@font-face {
-  font-family: 'Maven Pro';
-  font-style: normal;
-  font-weight: 500;
-  src: local('Maven Pro Medium'), local('MavenProMedium'), url('./fonts/maven-pro-medium.woff') format('woff');
-}
-@font-face {
-  font-family: 'Maven Pro';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Maven Pro Bold'), local('MavenProBold'), url('./fonts/maven-pro-bold.woff') format('woff');
-}
-@font-face {
-  font-family: 'Maven Pro';
-  font-style: normal;
-  font-weight: 900;
-  src: local('Maven Pro Black'), local('MavenProBlack'), url('./fonts/maven-pro-black.woff') format('woff');
+  src: local('Varela Round'), local('VarelaRound-Regular'), url('./fonts/varela-rounded.woff') format('woff');
 }
