--- a/less/views/home.less
+++ b/less/views/home.less
@@ -1,6 +1,6 @@
 
 .view.view-home {
-	@bg-color: lighten(@color-pale-blue-lighter, 20%);
+	@bg-color: @color-pale-blue-lightest;
 	@overlay-color: fade(@bg-color, 70%);
 
 	background-color: @bg-color;
