--- a/less/index.less
+++ b/less/index.less
@@ -2,6 +2,7 @@
 // Variables > Colors
 @color-primary: #41708a;
 
+@color-pale-blue-lightest: #e3ebee;
 @color-pale-blue-lighter: #a2bfc9;
 @color-pale-blue-light: #99b7c2;
 @color-pale-blue-dark: #87a6b1;
@@ -12,12 +13,12 @@
 @color-red-light: #fca47e;
 
 // Variables > Type: Base
-@type-base-face: 'Maven Pro', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+@type-base-face: 'Varela Round', 'HelveticaNeue', Helvetica, Arial, sans-serif;
 @type-base-size: 14px;
 @type-base-color: #fff;
 
 // Variables > Type: Headings
-@type-heading-face: 'Maven Pro', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+@type-heading-face: 'Varela Round', 'HelveticaNeue', Helvetica, Arial, sans-serif;
 @type-heading1-size: 36px;
 @type-heading2-size: @type-heading1-size - 2px;
 @type-heading3-size: @type-heading2-size - 2px;
