Change color of shots counter when loosing stars

--- a/less/game/main.less
+++ b/less/game/main.less
@@ -37,16 +37,16 @@
 			margin-left: -15px;
 		}
 
-		&.stars-2 {
+		.inner.stars-2 {
 			color: @color-yellow-dark;
 		}
 
-		&.stars-1 {
-			color: @color-red-light;
+		.inner.stars-1 {
+			color: @color-yellow-dark;
 		}
 
-		&.stars-0 {
-			color: @color-pale-blue-light;
+		.inner.stars-0 {
+			color: @color-red-dark;
 		}
 	}
 
