--- a/less/index.less
+++ b/less/index.less
@@ -11,6 +11,7 @@
 @color-yellow-dark: #ead545;
 
 @color-red-light: #fca47e;
+@color-red-dark: #f56949;
 
 // Variables > Type: Base
 @type-base-face: 'Varela Round', 'HelveticaNeue', Helvetica, Arial, sans-serif;
