--- a/templates/views/game.hbs
+++ b/templates/views/game.hbs
@@ -1,7 +1,6 @@
-
 <span class="shots-counter">
 	<i class="icon-bullseye"></i>
-	<span data-role="shots-counter">-</span>
+	<span class="inner" data-role="shots-counter">-</span>
 </span>
 
 <span class="pause-button" data-role="pause">
