Fix bugs with targets, add reset button, fix levels imperfections after testing game

--- a/less/game/main.less
+++ b/less/game/main.less
@@ -50,15 +50,23 @@
 		}
 	}
 
-	.pause-button {
+	.pause-button, .reset-button {
 		position: absolute;
 		display: inline-block;
 		color: #fff;
 		font-size: 18px;
 		z-index: 3;
+		padding: 10px 14px;
+	}
+
+	.pause-button {
 		right: 0;
 		top: 0;
-		padding: 10px 14px;
+	}
+
+	.reset-button {
+		left: 0;
+		top: 0;
 	}
 }
 
