--- a/templates/views/game.hbs
+++ b/templates/views/game.hbs
@@ -1,3 +1,7 @@
+<span class="reset-button" data-role="reset">
+	<i class="icon-refresh"></i>
+</span>
+
 <span class="shots-counter">
 	<i class="icon-bullseye"></i>
 	<span class="inner" data-role="shots-counter">-</span>
