--- a/templates/views/levels.hbs
+++ b/templates/views/levels.hbs
@@ -8,7 +8,7 @@
 
 </div>
 
-<ul class="levels-list">
+<ul class="levels-list scrollable">
 	{{#each levels}}
 		<li class="{{#if locked}}locked{{/if}}" data-role="level" data-level-name="{{ name }}">
 			{{ name }}
