Layout fixes for iOS7

--- a/less/core/layout.less
+++ b/less/core/layout.less
@@ -6,7 +6,7 @@ html, body {
 }
 
 body {
-	background: #222;
+	background: @color-pale-blue-lighter;
 	font-family: @type-base-face;
 	font-size: @type-base-size;
 	color: @type-base-color;
