Add achievements, implement novice and fryup

--- a/less/index.less
+++ b/less/index.less
@@ -7,6 +7,7 @@
 @color-pale-blue-light: #99b7c2;
 @color-pale-blue-dark: #87a6b1;
 @color-pale-blue-darker: #7796a1;
+@color-pale-blue-darkest: #59717a;
 
 @color-yellow-dark: #ead545;
 
@@ -58,6 +59,7 @@
 
 // Imports > Game
 @import "game/main.less";
+@import "game/achievements.less";
 
 // Imports > Views
 @import "views/home.less";
