Implement all achievements and improve achievements module

--- a/less/core/layout.less
+++ b/less/core/layout.less
@@ -14,8 +14,17 @@ body {
 }
 
 #view-wrap {
+	position: fixed;
+	overflow: hidden;
+}
+
+#notifications-wrap {
 	position: absolute;
 	overflow: hidden;
+	width: 100%;
+	left: 0;
+	top: 0;
+	z-index: 6;
 }
 
 .float-left {
