--- a/less/elements/buttons.less
+++ b/less/elements/buttons.less
@@ -29,7 +29,7 @@
 .button-flat-color (@bg-color: @color-pale-blue-dark, @text-color: #fff) {
 	display: inline-block;
 	padding: 10px;
-	background: @bg-color;
+	background: fade(@bg-color, 80%);
 	.border-radius(@radius-base);
 	color: @text-color;
 
