--- a/less/elements/modals.less
+++ b/less/elements/modals.less
@@ -9,7 +9,7 @@
 	}
 
 	.modal {
-		background: @color-pale-blue-dark;
+		background: fade(@color-pale-blue-dark, 80%);
 		.border-radius(@radius-base);
 		width: 80%;
 		min-height: 50px;
