--- a/less/index.less
+++ b/less/index.less
@@ -69,3 +69,4 @@
 @import "views/modals/end-game.less";
 @import "views/modals/pause.less";
 @import "views/modals/tutorial.less";
+@import "views/modals/completed-game.less";
