--- a/less/views/modals/end-game.less
+++ b/less/views/modals/end-game.less
@@ -2,17 +2,8 @@
 .modal.modal-end-game {
 
 	.button-back {
-		display: inline-block;
-		width: 33px;
-		height: 33px;
-		line-height: 35px;
-		color: mix(@color-pale-blue-lighter, #fff, 50%);
-		text-align: center;
-		background: @color-pale-blue-dark;
-		.border-radius(@radius-base);
-		position: absolute;
+		.modal-top-button;
 		left: 5px;
-		top: 5px;
 	}
 
 	.stars {
