--- a/less/core/layout.less
+++ b/less/core/layout.less
@@ -15,12 +15,15 @@ body {
 
 #view-wrap {
 	position: fixed;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
 	overflow: hidden;
 }
 
 #notifications-wrap {
-	position: absolute;
-	overflow: hidden;
+	position: fixed;
 	width: 100%;
 	left: 0;
 	top: 0;
