Refactor templates rendering across all modules (add partials support back)

--- a/less/game/achievements.less
+++ b/less/game/achievements.less
@@ -36,8 +36,8 @@
 				.achievement-icon('master');
 			}
 
-			&.achievement-icon-committed {
-				.achievement-icon('committed');
+			&.achievement-icon-champion {
+				.achievement-icon('champion');
 			}
 		}
 	}
