--- a/less/index.less
+++ b/less/index.less
@@ -64,6 +64,7 @@
 // Imports > Views
 @import "views/home.less";
 @import "views/levels.less";
+@import "views/achievements.less";
 
 // Imports > Views > Modals
 @import "views/modals/end-game.less";
