--- a/templates/views/home.hbs
+++ b/templates/views/home.hbs
@@ -1,5 +1,4 @@
 <div class="inner">
-
 	<div class="main-nav">
 
 		<img class="logo" src="./assets/logo/home@2x.png">
@@ -8,10 +7,16 @@
 			<i class="icon-gamepad"></i>
 			Play
 		</a>
+
 		<a class="button-flat block" data-role="nav-levels" href="#">
 			<i class="icon-list"></i>
 			Levels
 		</a>
-	</div>
 
+		<a class="button-flat block" data-role="nav-achievements" href="#">
+			<i class="icon-trophy"></i>
+			Achievements
+		</a>
+
+	</div>
 </div>
