--- a/templates/partials/achievement-notification.hbs
+++ b/templates/partials/achievement-notification.hbs
@@ -1,5 +1,8 @@
 <div class="achievement-notification">
 
-	{{> partials/achievement-box}}
+	<div class="inner">
+		<h6>Achievement unlocked!</h6>
+		{{> partials/achievement-box}}
+	</div>
 
 </div>
