--- a/templates/views/levels.hbs
+++ b/templates/views/levels.hbs
@@ -4,11 +4,13 @@
 		<i class="icon-caret-left"></i>
 	</a>
 
-	<h1 class="center">Levels</h1>
+	<h1 class="center">
+		Levels
+	</h1>
 
 </div>
 
-<ul class="levels-list scrollable">
+<ul class="levels-list">
 	{{#each levels}}
 		<li class="{{#if locked}}locked{{/if}}" data-role="level" data-level-name="{{ name }}">
 			{{ name }}
