--- a/templates/views/achievements.hbs
+++ b/templates/views/achievements.hbs
@@ -1,10 +1,21 @@
-<h1>
-	<i class="icon-trophy"></i>
-	Achievements
-</h1>
+<div class="top-bar fixed">
+	
+	<a class="top-bar-button button-left" href="#" data-role="nav-home">
+		<i class="icon-caret-left"></i>
+	</a>
 
-{{#each achievements}}
+	<h1 class="center">
+		Achievements
+	</h1>
 
-	{{> achievement-box}}
+</div>
 
-{{/each}}
+<div class="achievements-list">
+
+	{{#each achievements}}
+
+		{{> partials/achievement-box}}
+
+	{{/each}}
+
+</div>
