Fix layout in achievements view

--- a/less/views/achievements.less
+++ b/less/views/achievements.less
@@ -2,6 +2,8 @@
 .view.view-achievements {
 
 	.achievements-list {
+		max-width: 380px;
+		padding: 20px;
 		.border-box;
 		margin: auto;
 		margin-top: 50px;
