Add sounds, settings and contributors in readme

--- a/less/core/layout.less
+++ b/less/core/layout.less
@@ -106,3 +106,17 @@ body {
 		right: 6px;
 	}
 }
+
+.button-settings {
+	@size: 25px;
+	.button-flat;
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	font-size: @size;
+	padding: 5px;
+	text-align: center;
+	width: @size;
+	height: @size;
+	line-height: @size;
+}
