--- a/less/elements/buttons.less
+++ b/less/elements/buttons.less
@@ -32,6 +32,7 @@
 	background: fade(@bg-color, 80%);
 	.border-radius(@radius-base);
 	color: @text-color;
+	.opacity(.8);
 
 	&.block {
 		display: block;
