--- a/less/views/modals/end-game.less
+++ b/less/views/modals/end-game.less
@@ -6,6 +6,11 @@
 		left: 5px;
 	}
 
+	.button-try-again {
+		font-size: 15px;
+		line-height: 20px;
+	}
+
 	.stars {
 		margin: auto;
 		width: 50%;
