--- a/templates/partials/modal-end-game.hbs
+++ b/templates/partials/modal-end-game.hbs
@@ -57,7 +57,7 @@
 			Levels
 		</a>
 
-		<a href="#" class="primary" data-role="restart">
+		<a href="#" class="primary button-try-again" data-role="restart">
 			<i class="icon-rotate-left"></i>
 			Try Again
 		</a>
