--- a/templates/views/levels.hbs
+++ b/templates/views/levels.hbs
@@ -8,6 +8,10 @@
 		Levels
 	</h1>
 
+	<a href="#" class="button-settings" data-role="settings">
+		<i class="icon-gear"></i>
+	</a>
+
 </div>
 
 <ul class="levels-list">
