--- a/less/index.less
+++ b/less/index.less
@@ -14,6 +14,9 @@
 @color-red-light: #fca47e;
 @color-red-dark: #f56949;
 
+@color-green-light: #c3e441;
+@color-green-dark: #9ab725;
+
 // Variables > Type: Base
 @type-base-face: 'Varela Round', 'HelveticaNeue', Helvetica, Arial, sans-serif;
 @type-base-size: 14px;
@@ -71,3 +74,4 @@
 @import "views/modals/pause.less";
 @import "views/modals/tutorial.less";
 @import "views/modals/completed-game.less";
+@import "views/modals/settings.less";
