--- a/templates/views/home.hbs
+++ b/templates/views/home.hbs
@@ -1,3 +1,7 @@
+<a href="#" class="button-settings" data-role="settings">
+	<i class="icon-gear"></i>
+</a>
+
 <div class="inner">
 	<div class="main-nav">
 
