--- a/less/views/home.less
+++ b/less/views/home.less
@@ -24,7 +24,7 @@
 			.button-flat {
 				max-width: 300px;
 				margin: auto;
-				margin-bottom: 10px;
+				margin-bottom: 5px;
 
 				&:last-child {
 					margin-bottom: 0;
@@ -32,7 +32,8 @@
 			}
 
 			.button-flat {
-				font-size: @type-heading6-size - 3px;
+				font-size: @type-heading6-size - 5px;
+				padding: 10px 0;
 
 				i {
 					margin-right: 4px;
