Fix achievements list layout

--- a/less/views/achievements.less
+++ b/less/views/achievements.less
@@ -3,10 +3,10 @@
 
 	.achievements-list {
 		max-width: 380px;
-		padding: 20px;
+		padding: 0 20px;
 		.border-box;
 		margin: auto;
-		margin-top: 50px;
+		margin-top: 0;
 
 		.achievement-box {
 			padding: 10px;
